Implement CR-004: Jakarta XML Binding 4 / jaxb-tools 4.x
- JAXB 2.3.9 -> 4.0.9; javax.xml.bind:jaxb-api -> jakarta.xml.bind-api
  4.0.2; javax.activation -> jakarta.activation-api 2.1.3.
- org.jvnet.jaxb2_commons:jaxb2-basics-* 0.11.0 -> org.jvnet.jaxb:
  jaxb-plugins-* 4.0.16; org.jvnet.jaxb2.maven2:maven-jaxb2-plugin 0.15.3
  -> org.jvnet.jaxb:jaxb-maven-plugin 4.0.16 (and -testing).
- Declare commons-lang3 explicitly (it was only ever transitive).
- Package renames (imports only, 72 files): javax.xml.bind ->
  jakarta.xml.bind, org.jvnet.jaxb2_commons -> org.jvnet.jaxb.
- Decode base64 enumeration values with java.util.Base64; the Jakarta
  4.0.x DatatypeConverter rejects valid one-byte input such as "QQ==".
- Port tests/zero RunZeroPlugin to org.jvnet.jaxb.maven.test.RunXJCMojo.
- Move all 28 .xsd/.xjb binding files to xmlns:jaxb=
  "https://jakarta.ee/xml/ns/jaxb" version 3.0; JAXB 4 silently ignores
  the legacy namespace. The xjc namespace is unchanged.
- Samples Ant references and README/CLAUDE.md updated.

Verified on JDK 17 and 21: full suite green; CLI output for samples/po
and OGC OWS 1.1.0 byte-identical to the JAXB 2.3.9 build.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015Xh3o4fUnqg26aA4PXsheG