@@ -1,8 +1,8 @@
 package org.hisrc.jsonix.compilation.jsonschema.typeinfo.builtin;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
-import org.jvnet.jaxb2_commons.xmlschema.XmlSchemaConstants;
+import org.jvnet.jaxb.xmlschema.XmlSchemaConstants;
 
 public class Base64BinaryTypeInfoProducer<T, C extends T, O> extends BinaryTypeInfoProducer<T, C, O> {
 
@@ -12,6 +12,8 @@ public class Base64BinaryTypeInfoProducer<T, C extends T, O> extends BinaryTypeI
 
 	@Override
 	public byte[] parse(String item) {
-		return DatatypeConverter.parseBase64Binary(item);
+		// java.util.Base64 rather than jakarta.xml.bind.DatatypeConverter: the Jakarta 4.0.x
+		// implementation rejects valid one-byte input such as "QQ==" (CR-004).
+		return Base64.getMimeDecoder().decode(item);
 	}
 }
